fix(style): fixed overflow declaration on html and body elements

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -29,7 +29,9 @@ body {
   background-color: $body-background;
 
   height: 100%;
+}
 
+body {
   overflow-x: hidden;
 }
 
